fix menu focus visible

--- a/styles/style.css
+++ b/styles/style.css
@@ -55,11 +55,11 @@
 
 .rec {
   position: absolute;
+  visibility: var(--visability);
   color: var(--accent-color);
   line-height: 25px;
   inset-block-start: var(--padding);
   inset-inline-end: calc(28px + var(--padding));
-  visibility: var(--visability);
 }
 
 .rec::after {
@@ -98,6 +98,7 @@
   box-sizing: border-box;
   border: none;
   border-radius: 0;
+  border-block-end: 1px solid transparent;
   padding: 0 13px 0 13px;
   color: var(--menu-theme-color);
   font-family: 'IBM Plex mono', sans-serif;
